--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 }
 
 body {
-  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",
+  /* font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",
   "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック体", YuGothic,
-  "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif; */
   font-size: 15px;
   line-height: 1.8;
   letter-spacing: .8px;
@@ -52,7 +52,7 @@ li {
  文字
 ---------------------------------*/
 .heading-primary {
-  font-family: "Cormorant Garamond", serif;
+  /* font-family: "Cormorant Garamond", serif; */
   font-size: 36px;
   line-height: 1;
   display: inline-block;
@@ -118,13 +118,13 @@ li {
 
 .logo-title {
   /* font-family: "Cormorant Garamond", serif; */
-  font-size: 100px;
+  font-size: 110px;
   font-weight: normal;
   line-height: 1;
   display: block;
   letter-spacing: .1em;
   font-weight:bold;
-  color: rgb(110, 102, 81);
+  color: rgb(126, 116, 90);
 }
 
 .logo-text {
