--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,8 @@ li {
   line-height: 1;
   display: inline-block;
   letter-spacing: .2em;
-  text-transform: lowercase;
-  color: #f39ac7;
+  /* text-transform: lowercase; */
+  color: #a89b87;
 }
 
 .section-heading {
@@ -141,7 +141,7 @@ li {
 ---------------------------------*/
 .gnav {
   z-index: 1;
-  font-family: "Cormorant Garamond", serif;
+  font-weight:bold;
   padding: 10px;
 }
 
@@ -156,10 +156,10 @@ li {
 }
 
 .gnav-link {
-  font-size: 16px;
+  font-size: 32px;
   font-weight: bold;
   letter-spacing: .1em;
-  text-transform: lowercase;
+  /* text-transform: lowercase; */
   color: #333;
 }
 
