--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ li {
 .rate:after {
   overflow: hidden;
   white-space: nowrap;
-  color: #f181b4;
+  color: yellow;
 }
 
 .rate1:after {
@@ -404,7 +404,7 @@ li {
 .copyright {
   font-size: 10px;
   text-align: center;
-  color: #8c8c8c;
+  color: #f1ebd9;
 }
 
 .page-top {
@@ -414,7 +414,7 @@ li {
   padding: 10px;
   cursor: pointer;
   text-align: center;
-  background-color: #ffe8f4;
+  background-color: #e7e4d3;
 }
 
 /*media Queries 767
